# harp.core.rp2040

./: .gitignore  .gitmodules  LICENSE  README.md
docs/source/: Doxyfile  README.md  conf.py  index.rst
examples/harp_c_app_example/: CMakeLists.txt  README.md
examples/harp_c_app_example/src/: main.cpp
firmware/: CMakeLists.txt  README.md
firmware/inc/: arm_regs.h  core_reg_bits.h  core_registers.h  harp_c_app.h  harp_core.h  harp_message.h  harp_synchronizer.h  reg_bits.h  reg_types.h  registers.h  stdio_usb.h  tusb_config.h
firmware/src/: core_registers.cpp  harp_c_app.cpp  harp_core.cpp  harp_synchronizer.cpp  main.cpp  registers.cpp  usb_descriptors.c
notes/: design_notes.md
tests/: get_info.py  get_timestamp.py  reboot_to_usb_device.py  set_mode.py  test_reply_speed.py
